# bogoengine

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Makefile  README.html  README.md  TODO.md  index.html  params.json
data/: list_partial_words.txt  list_special_words.txt
docs/: BatDau.html  BatDau.md
input_methods/: simpletelex.def  telex.def  viqr.def  vni.def
src/: CMakeLists.txt  Makefile  Rakefile  charset.cpp  charset.hpp  engine.cpp  engine.hpp  main.md  unittest.c  unittest.h  utf8small.c  utf8small.h  utils.cpp  utils.hpp
src/tryout/: tryout.c  tryout_unittest_fail.c  tryout_unittest_pass.c
test/: CMakeLists.txt  test_utils.cpp  text_tcvn3.txt  text_utf8.txt
test_data/: simple_telex.txt
tests/: Makefile  test_utf8.c  test_utf8_input.txt
